--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            
+        </div>
+    </header>
 </body>
 </html>
