feat: сделал базовую html разметку

--- a/index.html
+++ b/index.html
@@ -10,8 +10,79 @@
 <body>
     <header class="header">
         <div class="container">
-            
+            <h1 class="header__title">
+                DrumKit 
+            </h1>
+            <a href="https://youtu.be/VuN8qwZoego?si=rq-jKYgmGcpD3Ln1" class="header__link" target="_blank">Link for tutorial</a>
         </div>
     </header>
+    <main class="main">
+        <section class="keys">
+            <div class="container">
+                <h2 class="keys__title">
+                    Click on the cleft or click on the block with the mouse
+                </h2>
+                <div class="keys__list">
+                    <div class="keys__item">
+                        <kdb>q</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>w</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>e</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>r</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>t</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>y</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>a</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>s</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>d</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>f</kdb>
+                    </div>
+                    <div class="keys__item">
+                        <kdb>g</kdb>
+                    </div>
+                </div>
+                <div class="keys__audio">
+                    <audio src="./sound/808_2.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_3.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_4.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_5.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_6.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_7.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_C.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_K.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_O.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_S.wav" class="keys__audio-item"></audio>
+                    <audio src="./sound/808_R.wav" class="keys__audio-item"></audio>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <h3 class="footer__title">
+                My links
+            </h3>
+            <ul class="footer__list">
+                <li class="footer__list-item"><a href="" class="footer__list-link">github</a></li>
+                <li class="footer__list-item"><a href="" class="footer__list-link">facebook</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
