--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 My links
             </h3>
             <ul class="footer__list">
-                <li class="footer__list-item"><a href="" class="footer__list-link">github</a></li>
-                <li class="footer__list-item"><a href="" class="footer__list-link">facebook</a></li>
+                <li class="footer__list-item"><a href="https://t.me/nillks_rss" class="footer__list-link" target="_blank">github</a></li>
+                <li class="footer__list-item"><a href="https://t.me/nillks_rss" class="footer__list-link" target="_blank">telegram</a></li>
             </ul>
         </div>
     </footer>
