feat: добавил дата атрибуты для дивов и аудио

--- a/index.html
+++ b/index.html
@@ -33,52 +33,52 @@
             Click on the cleft or click on the block with the mouse
           </h2>
           <div class="keys__list">
-            <div class="keys__item">
+            <div class="keys__item" data-key="81">
               <kdb>q</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>w</kdb>
+            <div class="keys__item" data-key="87">
+                <kdb>w</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>e</kdb>
+            <div class="keys__item" data-key="69">
+                <kdb>e</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>r</kdb>
+            <div class="keys__item" data-key="82">
+                <kdb>r</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>t</kdb>
+            <div class="keys__item" data-key="84">
+                <kdb>t</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>y</kdb>
+            <div class="keys__item" data-key="89">
+                <kdb>y</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>a</kdb>
+            <div class="keys__item" data-key="65">
+                <kdb>a</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>s</kdb>
+            <div class="keys__item" data-key="83">
+                <kdb>s</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>d</kdb>
+            <div class="keys__item" data-key="68">
+                <kdb>d</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>f</kdb>
+            <div class="keys__item" data-key="70">
+                <kdb>f</kdb>
             </div>
-            <div class="keys__item">
-              <kdb>g</kdb>
+            <div class="keys__item" data-key="71">
+                <kdb>g</kdb>
             </div>
           </div>
           <div class="keys__audio">
-            <audio src="./sound/808_2.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_3.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_4.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_5.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_6.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_7.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_C.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_K.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_O.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/808_S.wav" class="keys__audio-item"></audio>
-            <audio src="./sound/8O8_R.wav" class="keys__audio-item"></audio>
+            <audio src="./sound/808_2.wav" class="keys__audio-item" data-key="81"></audio>
+            <audio src="./sound/808_3.wav" class="keys__audio-item" data-key="87"></audio>
+            <audio src="./sound/808_4.wav" class="keys__audio-item" data-key="69"></audio>
+            <audio src="./sound/808_5.wav" class="keys__audio-item" data-key="82"></audio>
+            <audio src="./sound/808_6.wav" class="keys__audio-item" data-key="84"></audio>
+            <audio src="./sound/808_7.wav" class="keys__audio-item" data-key="89"></audio>
+            <audio src="./sound/808_C.wav" class="keys__audio-item" data-key="65"></audio>
+            <audio src="./sound/808_K.wav" class="keys__audio-item" data-key="83"></audio>
+            <audio src="./sound/808_O.wav" class="keys__audio-item" data-key="68"></audio>
+            <audio src="./sound/808_S.wav" class="keys__audio-item" data-key="70"></audio>
+            <audio src="./sound/8O8_R.wav" class="keys__audio-item" data-key="71"></audio>
           </div>
         </div>
       </section>
