feat: создал функцию запуска аудио звоков при нажатии на кливиши

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DrumKit</title>
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
     <link href="./css/normalize.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -29,56 +29,98 @@
     <main class="main">
       <section class="keys">
         <div class="container">
-          <h2 class="keys__title">
-            Click on the cleft or click on the block with the mouse
-          </h2>
+          <h2 class="keys__title">click on the corresponding button</h2>
           <div class="keys__list">
-            <div class="keys__item" data-key="81">
+            <div class="keys__item" data-key="KeyQ">
               <kdb>q</kdb>
             </div>
-            <div class="keys__item" data-key="87">
-                <kdb>w</kdb>
+            <div class="keys__item" data-key="KeyW">
+              <kdb>w</kdb>
             </div>
-            <div class="keys__item" data-key="69">
-                <kdb>e</kdb>
+            <div class="keys__item" data-key="KeyE">
+              <kdb>e</kdb>
             </div>
-            <div class="keys__item" data-key="82">
-                <kdb>r</kdb>
+            <div class="keys__item" data-key="KeyR">
+              <kdb>r</kdb>
             </div>
-            <div class="keys__item" data-key="84">
-                <kdb>t</kdb>
+            <div class="keys__item" data-key="KeyT">
+              <kdb>t</kdb>
             </div>
-            <div class="keys__item" data-key="89">
-                <kdb>y</kdb>
+            <div class="keys__item" data-key="KeyY">
+              <kdb>y</kdb>
             </div>
-            <div class="keys__item" data-key="65">
-                <kdb>a</kdb>
+            <div class="keys__item" data-key="KeyA">
+              <kdb>a</kdb>
             </div>
-            <div class="keys__item" data-key="83">
-                <kdb>s</kdb>
+            <div class="keys__item" data-key="KeyS">
+              <kdb>s</kdb>
             </div>
-            <div class="keys__item" data-key="68">
-                <kdb>d</kdb>
+            <div class="keys__item" data-key="KeyD">
+              <kdb>d</kdb>
             </div>
-            <div class="keys__item" data-key="70">
-                <kdb>f</kdb>
+            <div class="keys__item" data-key="KeyF">
+              <kdb>f</kdb>
             </div>
-            <div class="keys__item" data-key="71">
-                <kdb>g</kdb>
+            <div class="keys__item" data-key="KeyG">
+              <kdb>g</kdb>
             </div>
           </div>
           <div class="keys__audio">
-            <audio src="./sound/808_2.wav" class="keys__audio-item" data-key="81"></audio>
-            <audio src="./sound/808_3.wav" class="keys__audio-item" data-key="87"></audio>
-            <audio src="./sound/808_4.wav" class="keys__audio-item" data-key="69"></audio>
-            <audio src="./sound/808_5.wav" class="keys__audio-item" data-key="82"></audio>
-            <audio src="./sound/808_6.wav" class="keys__audio-item" data-key="84"></audio>
-            <audio src="./sound/808_7.wav" class="keys__audio-item" data-key="89"></audio>
-            <audio src="./sound/808_C.wav" class="keys__audio-item" data-key="65"></audio>
-            <audio src="./sound/808_K.wav" class="keys__audio-item" data-key="83"></audio>
-            <audio src="./sound/808_O.wav" class="keys__audio-item" data-key="68"></audio>
-            <audio src="./sound/808_S.wav" class="keys__audio-item" data-key="70"></audio>
-            <audio src="./sound/8O8_R.wav" class="keys__audio-item" data-key="71"></audio>
+            <audio
+              src="./sound/808_2.wav"
+              class="keys__audio-item"
+              data-key="KeyQ"
+            ></audio>
+            <audio
+              src="./sound/808_3.wav"
+              class="keys__audio-item"
+              data-key="KeyW"
+            ></audio>
+            <audio
+              src="./sound/808_4.wav"
+              class="keys__audio-item"
+              data-key="KeyE"
+            ></audio>
+            <audio
+              src="./sound/808_5.wav"
+              class="keys__audio-item"
+              data-key="KeyR"
+            ></audio>
+            <audio
+              src="./sound/808_6.wav"
+              class="keys__audio-item"
+              data-key="KeyT"
+            ></audio>
+            <audio
+              src="./sound/808_7.wav"
+              class="keys__audio-item"
+              data-key="KeyY"
+            ></audio>
+            <audio
+              src="./sound/808_C.wav"
+              class="keys__audio-item"
+              data-key="KeyA"
+            ></audio>
+            <audio
+              src="./sound/808_K.wav"
+              class="keys__audio-item"
+              data-key="KeyS"
+            ></audio>
+            <audio
+              src="./sound/808_O.wav"
+              class="keys__audio-item"
+              data-key="KeyD"
+            ></audio>
+            <audio
+              src="./sound/808_S.wav"
+              class="keys__audio-item"
+              data-key="KeyF"
+            ></audio>
+            <audio
+              src="./sound/8O8_R.wav"
+              class="keys__audio-item"
+              data-key="KeyG"
+            ></audio>
           </div>
         </div>
       </section>
